src/objects/TMN_Corp_Contract__c.object
<CustomObject>
    <description>Corp Contracts - Procurement.</description>
    <fields>
        <fullName>Amended_Extension_Termination_Date__c</fullName>
        <label>Amended/Extension Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ApprovalStage__c</fullName>
        <label>Approval Stage</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Auto_Liability_Coverage_Single_Limit__c</fullName>
        <label>Auto Liability Coverage Single Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Auto_Liability__c</fullName>
        <label>Business Auto Liability</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CGL_Coverage_amount_Per_Occurrence__c</fullName>
        <label>CGL Coverage amount - Per Occurrence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CGL_General_Aggregate__c</fullName>
        <label>CGL General Aggregate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CGL_Personal_and_Advertising_Injury__c</fullName>
        <label>CGL Personal and Advertising Injury</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CGL_Products__c</fullName>
        <label>CGL Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPS_Marketing_Officer_App_Received__c</fullName>
        <inlineHelpText>Chief Public Strategy &amp; Marketing Officer Approval Received?</inlineHelpText>
        <label>CPS &amp; Marketing Officer App. Received?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commercial_General_Liability__c</fullName>
        <label>Commercial General Liability</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commitments_generated_with__c</fullName>
        <label>Commitments generated with:</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOW &amp; PO</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commodity_Group__c</fullName>
        <label>Commodity Group</label>
        <picklist>
            <picklistValues>
                <fullName>Business Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting/HR/Prof. Svcs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet &amp; Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furniture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing/Advertising/Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Svcs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CompleteAssignedApprovers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete Assigned Approvers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consent_Required_Additional_Details__c</fullName>
        <label>Consent Required - Additional Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Consent_Required__c</fullName>
        <label>Consent Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Savings__c</fullName>
        <label>Contract Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CriticalIndicatorsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete Critical Indicators</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Day_since_Start__c</fullName>
        <formula>today()- Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day since Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysRemaining__c</fullName>
        <formula>Termination_Date__c -today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description of Contract</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DetailsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EO_Annual_Aggregate__c</fullName>
        <label>E&amp;O Annual Aggregate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>E_O_Coverage_Amount_Per_claim__c</fullName>
        <label>E&amp;O Coverage Amount - Per claim</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Errors_Omissions_Liability__c</fullName>
        <label>Errors &amp; Omissions Liability</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Evergreen__c</fullName>
        <label>Evergreen</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Insurance_Certificate_on_File__c</fullName>
        <label>Insurance Certificate on File</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_there_a_limit_on_suppliers_liability__c</fullName>
        <label>Is there a limit on supplier&apos;s liability</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LegalEntity__c</fullName>
        <label>Legal Entity</label>
        <picklist>
            <controllingField>State__c</controllingField>
            <picklistValues>
                <fullName>Alliance Human Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Advocacy Services, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois Mentor Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institute for Family Centered Services, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts Mentor LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor Maryland, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Mentor Healthcare, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Mentor Services, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ohio Mentor, Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM Connecticut Community Services, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM New Jersey, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM New Jersey Properties, Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Carolina Mentor, Inc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MENTOR_Standard_Agreement__c</fullName>
        <label>MENTOR Standard Agreement?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No-Supplier Contract</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MENTOR_listed_as_additional_insured__c</fullName>
        <label>MENTOR listed as additional insured</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MENTOR_ownership_of_Work_Product_Other__c</fullName>
        <label>MENTOR ownership of Work Product - Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MENTOR_retains_ownership_of_Work_Product__c</fullName>
        <label>MENTOR retains ownership of Work Product</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notice_period__c</fullName>
        <label>Notice period</label>
        <picklist>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Operating_Group__c</fullName>
        <label>Operating Group</label>
        <picklist>
            <picklistValues>
                <fullName>Cambridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CareMeridien</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NeuroRestorative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redwood</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Guaranteed__c</fullName>
        <label>Payment Guaranteed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ghost Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P-Card</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Net 0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 45</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Penalties_for_not_meeting_SLAs__c</fullName>
        <label>Penalties for not meeting SLA&apos;s?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <formula>Total_Required_Feilds_Answered__c /  Total_Required_Fields__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Price_increases_factored_into_agreement__c</fullName>
        <label>Price increases factored into agreement?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prices_fixed_for_term_of_Agreement__c</fullName>
        <label>Prices fixed for term of Agreement?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Procurement_Involvement__c</fullName>
        <label>Procurement Involvement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Procurement_Managed__c</fullName>
        <label>Procurement Managed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Agreement__c</fullName>
        <label>Purpose of Agreement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QBRs_included_in_agreement__c</fullName>
        <label>QBR&apos;s included in agreement?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate_Structure__c</fullName>
        <label>Rate Structure</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Diem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat/Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billable Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Session</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReadyForApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required_Termination_Notice__c</fullName>
        <label>Required Termination Notice</label>
        <picklist>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLAs_included_in_agreement__c</fullName>
        <label>SLA&apos;s included in agreement?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Line__c</fullName>
        <label>Service Line</label>
        <picklist>
            <picklistValues>
                <fullName>ABI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARY Group Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARY Host Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARY Periodic (Other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Intervention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDD Group Home/ICF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDD Host Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDD Periodic (Other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDD Supported Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outpatient Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schools</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Selection_Other__c</fullName>
        <label>Source Selection - Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Selection__c</fullName>
        <label>Source Selection</label>
        <picklist>
            <picklistValues>
                <fullName>Competitive Bid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Client Specified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sole Sourced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>test</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_of_Governing_Law__c</fullName>
        <label>State of Governing Law</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <controllingField>ApprovalStage__c</controllingField>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_for_approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted for approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier_Risk__c</fullName>
        <label>Supplier Risk</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Med</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Corp Contracts</relationshipLabel>
        <relationshipName>Corp_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_s_liability_limit_summary__c</fullName>
        <label>Supplier&apos;s liability limit summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination_for_Cause__c</fullName>
        <label>Termination for Cause</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Termination_for_Convenence__c</fullName>
        <label>Termination for Convenence</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TotalDays__c</fullName>
        <formula>Termination_Date__c - Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Required_Feilds_Answered__c</fullName>
        <label>Total Required Feilds Answered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Required_Fields__c</fullName>
        <label>Total Required Fields</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_Expenses_Reimbursed__c</fullName>
        <label>Travel Expenses Reimbursed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Contract__c</fullName>
        <label>Type of Contract</label>
        <picklist>
            <picklistValues>
                <fullName>AMEND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEASE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROFSVC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWLM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_as_reference_approved__c</fullName>
        <label>Use as reference approved?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contract Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Workers_Comp_per_Statuatory_Requirements__c</fullName>
        <label>Workers Comp per Statuatory Requirements</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>iProcurement_Catalog_Supplier__c</fullName>
        <label>iProcurement Catalog Supplier</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Corp Contract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Supplier__c</columns>
        <columns>Description__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Start_Date__c</columns>
        <columns>Termination_Date__c</columns>
        <columns>Amended_Extension_Termination_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>